--- a/About.html
+++ b/About.html
@@ -15,10 +15,10 @@
         <h1 id="heading1-index">Who Are We?</h1>
         
         <nav>
-            <a href="Index.html">Home</a>
-            <a href="Menu.html">Menu</a>
-            <a href="About.html">About Us</a>
-            <a href="Visit.html">Visit Us</a>
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <a href="about.html">About Us</a>
+            <a href="visit.html">Visit Us</a>
         </nav>
 
         <p id="p1-index">Rivera Roasts was born from a love of community, 
