--- a/Index.html
+++ b/Index.html
@@ -16,10 +16,10 @@
         <p id="p1-index">Delicious coffee brewed in Portland.</p>
 
         <nav>
-            <a href="Index.html">Home</a>
-            <a href="Menu.html">Menu</a>
-            <a href="About.html">About Us</a>
-            <a href="Visit.html">Visit Us</a>
+            <a href="index.html">Home</a>
+            <a href="menu.html">Menu</a>
+            <a href="about.html">About Us</a>
+            <a href="visit.html">Visit Us</a>
         </nav>
 
         <h2 id="heading2-index">Our Mission</h2>
